src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <label>Degree Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_AutoNumber__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>EV_AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Email_Unique__c</fullName>
        <description>Field will be copied from Standard Email field to make sure it&apos;s unique.</description>
        <externalId>true</externalId>
        <inlineHelpText>Field will be copied from Standard Email field to make sure it&apos;s unique.</inlineHelpText>
        <label>Email Unique</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>File_Link_FF__c</fullName>
        <formula>&apos;file://c:/Map1.log&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Link 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_File__c</fullName>
        <label>Local File</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact&apos;s manager</description>
        <label>Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Manager</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mentor</description>
        <label>Mentor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Mentor)</relationshipLabel>
        <relationshipName>Mentor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <description>Nationality</description>
        <label>Nationality</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Produce_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to facilitate / simulate an error.
A field validation is attached to trigger an error when this field is set to true.</description>
        <inlineHelpText>Field to facilitate / simulate an error.
A field validation is attached to trigger an error when this field is set to true.</inlineHelpText>
        <label>Produce Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tram</label>
        <referenceTo>Tram__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>computerprofile__Merge_Contact__c</fullName>
        <formula>HYPERLINK( 
&quot;/apex/computerprofile__POC_UpdateContactFromWS?scontrolCaching=1&amp;id=&quot; + Id, 
IMAGE(&quot;/img/icon/people24.png&quot;, &quot;Get Contacts from CFP&quot;), &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>computerprofile__cfp_CFP_No__c</fullName>
        <inlineHelpText>Stores the Unique Identifier of CFP</inlineHelpText>
        <label>CP No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>computerprofile__cfp_Gender__c</fullName>
        <label>Gender</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>computerprofile__cfp_Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>computerprofile__cfp_Last_Confirmation_Date__c</fullName>
        <label>Last Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isSurveyCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSurveyCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>soco__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>soco__Age__c</fullName>
        <formula>FLOOR(((TODAY() -  Birthdate )+1)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Amount_Donated_Current_Fiscal_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Donated Current Fiscal Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>soco__Amount_Donated_Last_Fiscal_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Donated Last Fiscal Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>soco__Amount_Donated_Penultimate_Fiscal_Year__c</fullName>
        <label>Amount Donated Penultimate Fiscal Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>soco__Assign_Donations_to_Parent_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assign the donations to the parent account</description>
        <inlineHelpText>Assign the donations to the parent account instead of the contact</inlineHelpText>
        <label>Assign Donations to Parent Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>soco__Donor_End_Date__c</fullName>
        <label>Donor End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soco__End_Date__c</fullName>
        <inlineHelpText>The date the relation between the person and the account ended or will end.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soco__First_Donation_Date__c</fullName>
        <label>First Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soco__Last_Donation__c</fullName>
        <label>Last Donation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soco__Member_End_Date__c</fullName>
        <label>Member End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soco__Member_Start_Date__c</fullName>
        <label>Member Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soco__Monetary_Value__c</fullName>
        <label>Monetary Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>soco__Number_of_Donations_Current_Fiscal_Year__c</fullName>
        <label>Number of Donations Current Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Number_of_Donations_Last_Fiscal_Year__c</fullName>
        <label>Number of Donations Last Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Number_of_Donations_Penultimate_FY__c</fullName>
        <label>Number of Donations Penultimate FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Originating_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Originating Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Resulting Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>soco__Person__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Person</label>
        <referenceTo>soco__Person__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>soco__Primary_Communication_Channel__c</fullName>
        <label>Primary Communication Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Regular mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>soco__Reason_for_Status__c</fullName>
        <label>Reason for Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>soco__Source__c.soco__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>By default only active records are shown</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>soco__Source__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>soco__Start_Date__c</fullName>
        <inlineHelpText>The date the relation between the person and the account started</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soco__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                    <default>true</default>
                    <label>Valid</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>soco__Volunteering_End_Date__c</fullName>
        <label>Volunteering End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soco__Volunteering_Start_Date__c</fullName>
        <label>Volunteering Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soco__n_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Candidate_Contact</fullName>
        <active>true</active>
        <description>Candidate Contact</description>
        <label>Candidate Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Contact</fullName>
        <active>true</active>
        <description>Standard Contact</description>
        <label>Standard Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Produce_Error</fullName>
        <active>true</active>
        <description>For testing purposes, the validation rule will fire if Produce_Error__c = TRUE</description>
        <errorConditionFormula>Produce_Error__c</errorConditionFormula>
        <errorMessage>Produce error is set to TRUE</errorMessage>
    </validationRules>
</CustomObject>